--- a/assignment_3_template/index.html
+++ b/assignment_3_template/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="script.js" type="module"></script>
-    <link rel="stylesheet" href="style.css">
-    <title>Faster speed louder words</title>
-</head>
+    <link rel="stylesheet" href="style.css" />
+    <title>the meaning of Hey</title>
+  </head>
 
-<body>
-    <p id="text"></p>
-</body>
-
+  <body>
+    <input type="text" name="" id="text-input" />
+    <p>fsjoafajf</p>
+  </body>
 </html>
