--- a/assignment_3_template/index.html
+++ b/assignment_3_template/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="script.js" type="module"></script>
-    <link rel="stylesheet" href="style.css" />
+    <script src="assignment_3_template/script.js" type="module"></script>
+    <link rel="stylesheet" href="assignment_3_template/style.css" />
     <title>the meaning of Hey</title>
   </head>
 
   <body>
-    <input type="text" name="" id="text-input" />
-    <p>fsjoafajf</p>
+    <!-- https://knowyourmeme.com/memes/heyy  -->
+    <img src="../images/heyyy.jpg" alt="explanation of hey" srcset="">
+    <input type="text" name="" id="text-input" placeholder="hey" autofocus="true"/>
   </body>
 </html>
